# JSON-parser

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  TODO  run_ci_cd.zsh  run_clang_format.sh  run_clang_tidy.sh  run_complexity_check.zsh  run_tests.zsh
cmake/: sjkxq_json.pc.in  sjkxq_jsonConfig.cmake.in
include/sjkxq_json/: json.hpp  parser.hpp  serializer.hpp  value.hpp
test/: CMakeLists.txt  sjkxq_json_tests
test/benchmark/: benchmark.cpp
test/benchmark/test_data/: large.json
test/boundary_tests/: boundary_parser_test.cpp
test/fuzz_tests/: fuzz_parser.cpp
test/integration_tests/: integration_test.cpp
test/unit_tests/: value_test.cpp
